--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <body>
         <header>
         <h1> Рось</h1>
-        <a href=""><img class="gg" src="https://www.freepnglogos.com/uploads/logo-home-png/chimney-home-icon-transparent-1.png" width="35px" height="28px"> </a>
+        <a href="https://matviy130moshch.github.io/Reliz2/"><img class="gg" src="https://www.freepnglogos.com/uploads/logo-home-png/chimney-home-icon-transparent-1.png" width="35px" height="28px"> </a>
         <div>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span>Горинь</span></button>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span> Случ</span></button>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span> Припять </span></button>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span> Рось </span></button>
+   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz3/">Горинь</a></span></button>
+   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz4/"> Случ</a></span></button>
+   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz5/"> Припять</a> </span></button>
+   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz6/"> Рось</a> </span></button>
    </div>
    <div>
-    <button class="custom-btn btn-3"><span> Цікаві факти </span></button>
+    <button class="custom-btn btn-3"><span> <a class="a" href="https://matviy130moshch.github.io/Reliz/">Цікаві факти</a> </span></button>
    </div>
     </header>
    <h2> Довжина річки Рось становить 378,3 км, площа басейну — 12 750 км². Пересічна ширина річища в середній течії — близько 50 м. Для долини Росі характерне чергування звужених і розширених ділянок, її ширина змінюється від кількох сотень метрів до 4,5—5 км. Подекуди спостерігається асиметрія схилів долини: правий схил високий (до 60—80 м) і крутий, лівий — низький і пологий. У місцях перетину кристалічних порід річка звужується до 10—15 м, стає порожистою. Середній похил річки — 0,56 м/км. Заплава на розширених ділянках терасована, завширшки 2—2,5 км, у звуженнях — 200—300 м.
