--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <h1> Рось</h1>
         <a href="https://matviy130moshch.github.io/Reliz2/"><img class="gg" src="https://www.freepnglogos.com/uploads/logo-home-png/chimney-home-icon-transparent-1.png" width="35px" height="28px"> </a>
         <div>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz3/">Горинь</a></span></button>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz4/"> Случ</a></span></button>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz5/"> Припять</a> </span></button>
-   <button class="custom-btn btn-12"><span>Детальніше</span><span><a href="https://matviy130moshch.github.io/Reliz6/"> Рось</a> </span></button>
+   <button class="custom-btn btn-12"><span><a href="https://matviy130moshch.github.io/Reliz3/">Детальніше</a></span><span>Горинь</span></button>
+   <button class="custom-btn btn-12"><span><a href="https://matviy130moshch.github.io/Reliz4/">Детальніше</a></span><span> Случ</span></button>
+   <button class="custom-btn btn-12"><span><a href="https://matviy130moshch.github.io/Reliz5/">Детальніше</a></span><span> Припять </span></button>
+   <button class="custom-btn btn-12"><span><a href="https://matviy130moshch.github.io/Reliz6/">Детальніше</a> </span><span> Рось </span></button>
    </div>
    <div>
     <button class="custom-btn btn-3"><span> <a class="a" href="https://matviy130moshch.github.io/Reliz/">Цікаві факти</a> </span></button>
